--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           aria-controls="offcanvasNavbar"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-tog`gler-icon"></span>
         </button>
         <div
           class="offcanvas offcanvas-end"
@@ -91,6 +91,7 @@
             <p>
               Esonori adalah makanan pelengkap yang berasal dari olahan daun melinjo yang diinovasikan menjadi topping makanan bercita rasa gurih dan pedas. Esonori ini berbentuk seperti nori yang biasanya untuk taburan makanan dengan sensasi yang berasal dari daun melinjo.
             </p>
+            <p>Daun melinjo kaya akan antioksidan dan beragam nutrisi, seperti: Vitamin A, Serat, Zat besi, Fosfor, Kalium, Magnesium, Kalsium, dan Zinc. Daun melinjo juga mengandung antioksidanyang baik untuk menjaga kesehatan tubuh dan memiliki efek menangkal radikal bebas. Beberapa penelitian menyatakan bahwa antioksidan yang terkandung dalam daun melinjo juga dapat menghambat pertumbuhan sel-sel kanker, penuaan, dan penyakit jantung.</p>
             <img src="img/photoproduct.png" alt="photoproduct">
             <img src="img/photoproduct2.png" alt="photoproduct2">
           </div>
@@ -166,7 +167,7 @@
           <div class="col-12">
             <div class="mb-3">
               <label for="telepon" class="form-label">No Telepon</label>
-              <input type="text" class="form-control" id="telepon" name="telepon" />
+              <input type="number" class="form-control" id="telepon" name="telepon" />
             </div>
           </div>
           <div class="col-12">
@@ -223,12 +224,7 @@
               ></small
             >
 
-            <ul class="mt-3">
-              <li>
-                <a href="https://www.instagram.com/farhanyuzaa/">
-                <i class="bi bi-instagram"></i></a>
-              </li>
-            </ul>
+            
           </div>
         </div>
       </div>
@@ -237,6 +233,10 @@
     <div class="contact-order">
       <a href="https://api.whatsapp.com/send/?phone=6287743984570&type=phone_number&app_absent=0">
       <i class="bi bi-whatsapp"></i></a>
+    </div>
+    <div class="contact-instagram">
+      <a href="https://www.instagram.com/esonoriofficial/">
+      <i class="bi bi-instagram"></i></a>
     </div>
 
     <script
